k8s/ingress/ezfood-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ezfood-ingress
  namespace: food-ordering-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: usermanagement-service
                port:
                  number: 5052
          - path: /api/customers
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 3000
          - path: /api/restaurants
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 3000
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 3000
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5051
          - path: /api/delivery
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 8081
          - path: /api/stripe
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5056
          - path: /api/paypal
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5056
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
